# Simple-AI-Client

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md
Control/: AiRegistry.cpp  AiRegistry.h  ConversationManager.cpp  ConversationManager.h  NetControl.h
Model/: Conversation.cpp  Conversation.h  Message.cpp  Message.h  ModelConfig.cpp  ModelConfig.h
Network/: ApiClient.cpp  ApiClient.h
UI/: ChatItemWidget.cpp  ChatItemWidget.h  ChatWidget.cpp  ChatWidget.h  ConversationListWidget.cpp  ConversationListWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  modelmanagement.cpp  modelmanagement.h  modelmanagement.ui  modelsettings.cpp  modelsettings.h  modelsettings.ui
